--- a/main.css
+++ b/main.css
@@ -1,37 +1,37 @@
 h1 {
-    font-size: ;
-    font-family: ;
-    padding: ;
-    margin: ;
-    font-weight: ;
-    text-decoration: ;
-    color: ;
-    background-color: ;
+    font-size: 45px;
+    font-family: sans-serif;
+    padding: 10px 100px;
+    margin: 50px 30%;
+    font-weight: bold;
+    text-decoration: underline;
+    color: black;
+    background-color: white;
 }
 
 h2 {
-    font-size: ;
-    font-family: ;
-    padding: ;
-    margin: ;
-    font-weight: ;
-    color: ;
-    background-color: ;
+    font-size: 20px;
+    font-family: Georgia;
+    padding: 10px;
+    margin: 20px 36%;
+    font-weight: bold;
+    color: black;
+    background-color: white;
 }
 
 p {
-    font-family: ;
-    font-size: ;
-    padding: ;
-    margin: ;
-    color: ;
-    background-color: ;
+    font-family: Georgia;
+    font-size: 1em;
+    padding: 10px;
+    margin: 25px 20%;
+    color: black;
+    background-color: white;
 }
 
 .logo {
     background-size: cover;
-    background-image: url();
-    background-color: ;
-    height: ;
-    width: ;
+    background-image: url(https://appacademy.github.io/styleguide/assets/logo/logo-emblem-black-1000.png);
+    background-color: red;
+    height: 600px;
+    width: 600px;
 }
